--- a/AirportProject/conf/application.conf
+++ b/AirportProject/conf/application.conf
@@ -354,7 +354,7 @@ db {
   default.driver=com.mysql.jdbc.Driver
   default.url="jdbc:mysql://localhost/air"
   default.username=root
-  default.password="rzd83091"
+  default.password="root"
 
   # You can turn on SQL logging for any datasource
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
