--- a/AirportProject/conf/application.conf
+++ b/AirportProject/conf/application.conf
@@ -348,13 +348,13 @@ db {
   # https://www.playframework.com/documentation/latest/Developing-with-the-H2-Database
   #default.driver = org.h2.Driver
   #default.url = "jdbc:h2:mem:play"
-  #default.username = sa
-  #default.password = ""
+  #default.username = root
+  #default.password = "Txe47Hs3U!"
 
   default.driver=com.mysql.jdbc.Driver
   default.url="jdbc:mysql://localhost/air"
   default.username=root
-  default.password="rzd83091"
+  default.password="Txe47Hs3U!"
 
   # You can turn on SQL logging for any datasource
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
