Richard did a thing

--- a/AirportProject/conf/application.conf
+++ b/AirportProject/conf/application.conf
@@ -355,15 +355,7 @@ db {
   default.driver=com.mysql.jdbc.Driver
   default.url="jdbc:mysql://localhost/air"
   default.username=root
-<<<<<<< HEAD
-<<<<<<< HEAD
-  default.password="Txe47Hs3U!"
-=======
-  default.password="root"
->>>>>>> e317f9a380d687473b9ff4a07073aa88618a3c35
-=======
-  default.password=root
->>>>>>> ad293fa7dfd2117183f5f3d12c8f38fbb2f9f2f8
+  default.password="rzd83091"
 
   # You can turn on SQL logging for any datasource
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
